After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703626 - "Browse" togglebutton/pushbutton is initially inconsistent
"Browse" togglebutton/pushbutton is initially inconsistent
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: User Interface
2.99.x
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-04 18:34 UTC by Jean-François Fortin Tam
Modified: 2013-07-13 13:04 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jean-François Fortin Tam 2013-07-04 18:34:16 UTC
1. Start rhythmbox
2. Go to a playlist or library or whatever
3. Notice that the genre/artist/album browser (or similar) is displayed, and the "Browse" button above it is not "active".
4. Click the "Browse" button.

Result: the browse button becomes active, and the browser stays in place.

Expected result: the button should already have been active, clicking on it should deactivate the browser on the first try.

Bonus mission: while you're at it... make the browser remember its state (bug #652892). I'm sick of closing it all the time, it's one of those enduring UI annoyances in rhythmbox :)

Thanks!
Comment 1 Jonathan Matthew 2013-07-13 13:04:58 UTC
fixed in commit 682fa7c