playlist: save settings in playlists.xml

This includes browser visibility (and size) and the selected search
type.  Sorting for automatic playlists was already covered, and
static playlists aren't sortable.

https://bugzilla.gnome.org/show_bug.cgi?id=703626
https://bugzilla.gnome.org/show_bug.cgi?id=652892