sources/rb-static-playlist-source.h
@@ -62,11 +62,12 @@ GType		rb_static_playlist_source_get_type 	(void);
 
 RBSource *	rb_static_playlist_source_new		(RBShell *shell,
 							 const char *name,
-							 const char *settings_name,
+							 GSettings *settings,
 							 gboolean local,
 							 RhythmDBEntryType *entry_type);
 
 RBSource *	rb_static_playlist_source_new_from_xml	(RBShell *shell,
+							 const char *name,
 							 xmlNodePtr node);
 void		rb_static_playlist_source_load_from_xml	(RBStaticPlaylistSource *source,
 							 xmlNodePtr node);
